--- a/src/index.css
+++ b/src/index.css
@@ -1,56 +1,106 @@
-.App {
+body{
+  margin: 0;
+  font-family: "Open Sans", "Droid Sans", Helvetica, Arial, sans-serif;
+
+}
+
+
+
+header {
+  background-color:darkslategrey;
+  color:#fff;
   text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+footer {
+  position:fixed;
+  bottom: 0;
+  background-color:darkslategrey;
+  color:#ffffff;
+  text-align: center;
+  height:50px;
+  width: 100%;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+footer h2{
+  color:white;
+  background-color:darkslategrey;
+  margin: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+header h2{
+  color:white;
+  border: yellow 10px ;
+  border-style:outset;
+  padding: 10px 30px;
+  background-color:darkslategrey;
+  margin: 10px 30px;
+}
+
+
+nav  li {
+  display:inline-block;
+  list-style-type: none;
+  font-family: "Open Sans", "Droid Sans", Helvetica, Arial, sans-serif;
+  padding:10px 10px;
+}
+nav li > a {
+  position: relative;
+  display: block;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  
+}
+nav li > a:hover{
+  color: yellow;
+}
+
+nav > li > a:focus {
+  text-decoration: none;
+  background-color: #eee;
+}
+
+.container{
+  margin: 10px;
+  align-items: center;
+  border: black 10px solid;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container ag-theme-balham{
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container form label{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.container button{
+  background-color:cadetblue;
+  margin: 10px 30px;
+  font-size: medium;
+  padding: 5px 20px;
+  display: flex;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container button:hover{
+  background-color: aqua;
+  margin: 10px 30px;
+  font-size: medium;
+  padding: 5px 20px;
 }
 
-
+.grapbox{
+  margin: 10px;
+  align-items: center;
+  border: black 10px solid;
+}
